# quality-challenge

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
crawler/: crawler.py
notebooks/document_url/: README.md  document_url_notebook.ipynb  run_notebook.sh
notebooks/document_url/data/: test_data.csv
notebooks/documentation_url/: README.md  datasette_data.csv  documentation_url_notebook.ipynb  requirements.txt  run_notebook.sh
notebooks/documentation_url/data/: page_ranking_truth_df.csv
notebooks/documentation_url/data/chunking_csvs/: buckinghamshire.csv  camden.csv  castlepoint.csv  doncaster.csv  dover.csv  easthants.csv  epsom-ewell.csv  gloucester.csv  great-yarmouth.csv  lbbd.csv  medway.csv  n-somerset.csv  peterborough.csv  plymouth.csv  rochdale.csv  rossendale.csv  rother.csv  sandwell.csv  southglos.csv  southwark.csv  sstaffs.csv  stalbans.csv  torbay.csv  westberks.csv  wirral.csv
notebooks/duplicate_entities/: duplicate_entities.ipynb
notebooks/polygon_comparison/: ModularFunctionsTesting.ipynb  PlottingTests.ipynb  PolygonMatchingWalkthrough.ipynb  WalkthroughNotebook.ipynb  polygon_comparison.ipynb
notebooks/tree_classifier/: tree_classifier_notebook.ipynb
src/data_quality_utils/crawler/: crawler.py  utils.py
src/data_quality_utils/map_extractor/: __init__.py  google_map_tiles_extractor.py  google_static_maps_extractor.py  map_extractor.py  map_utils.py  wms_extractor.py
src/data_quality_utils/polygon/: plotting.py  polygon_matcher.py  utils.py
src/data_quality_utils/polygon_matching/: polygon_matching.py  polygon_plotting.py
src/data_quality_utils/similarity_searcher/: __init__.py  similiarity_searcher.py
src/data_quality_utils/tree_finder/: __init__.py  distance_utils.py  plotting_utils.py  tree_finder.py
tests/: __init__.py  test_crawler.py  test_polygons.py  test_searcher.py  test_tree.py
