[project]
name = "quality-challenge"
version = "0.1.0"
description = "An async web crawler with configurable filtering and scoring"
authors = [
    {name = "Simona Lihosithova",email = "simona.lihosithova@faculty.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "polars (==1.25.*)",
    "jupyter (>=1.1.1,<2.0.0)",
    "crawl4ai (==0.5.0.post4)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "langchain (>=0.3.22,<0.4.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "folium (>=0.19.5,<0.20.0)",
    "contextily (>=1.6.2,<2.0.0)",
    "mapclassify (>=2.8.1,<3.0.0)",
    "brdr (>=0.9.0,<0.10.0)",
    "osmnx (>=2.0.2,<3.0.0)",
    "ipyleaflet (>=0.19.2,<0.20.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "anywidget (>=0.9.18,<0.10.0)",
    "pyquibbler (>=0.3.5,<0.4.0)",
    "tk-tools (>=0.17.0,<0.18.0)",
    "ipympl (>=0.9.7,<0.10.0)"
]

[tool.poetry]
packages = [
{ include = "data_quality_utils", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
nbqa = "^1.9.1"
isort = "^6.0.1"
flake8 = "^7.2.0"
pyupgrade = "^3.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
