[project]
name = "quality-challenge"
version = "0.1.0"
description = "An async web crawler with configurable filtering and scoring"
authors = [
    {name = "Simona Lihosithova",email = "simona.lihosithova@faculty.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "polars (==1.25.*)",
    "jupyter (>=1.1.1,<2.0.0)",
    "crawl4ai (==0.5.0.post4)",
    "sentence-transformers (>=4.0.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "deepforest (>=1.5.2,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "geopandas (>=1.0.1,<2.0.0)",
    "owslib (>=0.33.0,<0.34.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
packages = [
{ include = "data_quality_utils", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
nbqa = "^1.9.1"
isort = "^6.0.1"
flake8 = "^7.2.0"
pyupgrade = "^3.19.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
